<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5">

            <ImageView
                android:layout_width="375sp"
                android:layout_height="250sp"
                android:src="@drawable/thumbnail" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical"
            android:paddingStart="12sp"
            android:paddingTop="10sp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exhibition"
                android:textAllCaps="true"
                android:textColor="#979797"
                android:textSize="10sp"
                android:textStyle="bold"
                tools:ignore="SmallSp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masters"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/old_and"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newword"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="6sp"
                android:text="@string/april_15_september_20"
                android:textAllCaps="true"
                android:textColor="#FF473A"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="6sp"
                android:text="@string/floor_5"
                android:textAllCaps="true"
                android:textColor="#979797"
                android:textSize="10sp"
                android:textStyle="bold"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15sp"
            android:paddingStart="65dp"
            android:paddingTop="15sp"
            tools:ignore="RtlSymmetry">

            <Button
                android:layout_width="250sp"
                android:layout_height="42sp"
                android:layout_gravity="center"
                android:background="#FF473A"
                android:elevation="4sp"
                android:padding="8sp"
                android:text="@string/plan_your_visit"
                android:textAllCaps="false"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="10sp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/union" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingStart="6sp"
                    android:text="@string/_151_3rd_st_san_francisco_ca_94103"
                    android:textColor="#FF473A"
                    android:textSize="15sp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="10sp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ellipse" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingStart="6sp"
                    android:text="@string/open_today_10_00am_5_30pm"
                    android:textColor="#FF473A"
                    android:textSize="15sp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>